RESOLVED FIXED162298
VariadicHelper::Result should not include constructor to initialize members
https://bugs.webkit.org/show_bug.cgi?id=162298
Summary VariadicHelper::Result should not include constructor to initialize members
Nael Ouedraogo
Reported 2016-09-20 10:06:51 PDT
VariadicHelper::Result should not include constructor to initialize members. Member-wise initialization is sufficient.
Attachments
Patch (1.46 KB, patch)
2016-09-20 10:12 PDT, Nael Ouedraogo
no flags
Nael Ouedraogo
Comment 1 2016-09-20 10:12:34 PDT
Nael Ouedraogo
Comment 2 2016-09-20 23:25:02 PDT
Thanks for the review.
WebKit Commit Bot
Comment 3 2016-09-20 23:46:17 PDT
Comment on attachment 289371 [details] Patch Clearing flags on attachment: 289371 Committed r206199: <http://trac.webkit.org/changeset/206199>
WebKit Commit Bot
Comment 4 2016-09-20 23:46:23 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.