VariadicHelper::Result should not include constructor to initialize members https://bugs.webkit.org/show_bug.cgi?id=162298

Reviewed by Darin Adler.

Remove the constructor since member-wise initialization does the same thing.

No new tests required.

* bindings/js/JSDOMBinding.h: Remove useless constructor.


Canonical link: https://commits.webkit.org/180347@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206199 268f45cc-cd09-0410-ab3c-d52691b4dbfc